[MQ][CQ] Schemas should use FixedVector instead of Vector https://bugs.webkit.org/show_bug.cgi?id=258260 rdar://110955636

Reviewed by Ryosuke Niwa.

The list of identifiers is fixed size, use a FixedVector which is more optimized for this case.

* Source/WebCore/css/query/ContainerQueryFeatures.cpp:
(WebCore::CQ::Features::SizeFeatureSchema::SizeFeatureSchema):
* Source/WebCore/css/query/GenericMediaQueryTypes.h:
(WebCore::MQ::FeatureSchema::FeatureSchema):
* Source/WebCore/css/query/MediaQueryFeatures.cpp:
(WebCore::MQ::Features::IdentifierSchema::IdentifierSchema):
(WebCore::MQ::Features::anyHover):
(WebCore::MQ::Features::anyPointer):
(WebCore::MQ::Features::colorGamut):
(WebCore::MQ::Features::dynamicRange):
(WebCore::MQ::Features::forcedColors):
(WebCore::MQ::Features::hover):
(WebCore::MQ::Features::invertedColors):
(WebCore::MQ::Features::orientation):
(WebCore::MQ::Features::pointer):
(WebCore::MQ::Features::prefersContrast):
(WebCore::MQ::Features::prefersDarkInterface):
(WebCore::MQ::Features::prefersReducedMotion):
(WebCore::MQ::Features::scan):
(WebCore::MQ::Features::scripting):
(WebCore::MQ::Features::update):
(WebCore::MQ::Features::displayMode):
(WebCore::MQ::Features::overflowBlock):
(WebCore::MQ::Features::overflowInline):
(WebCore::MQ::Features::prefersColorScheme):

Canonical link: https://commits.webkit.org/265282@main